--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World!</string>
+    <string name="people">people name</string>
     <string name="app_name">EventListener</string>
+    <string name="notify">notify</string>
+    <string name="people_name">people name</string>
 </resources>
